# Structural-Geospatial-Identification

./: CHANGELOG.md  LICENSE  README.md  classifier.py  features.py  pyproject.toml  sgi-light-prototype.ipynb  test_sgi.py
notebooks/: sgi-machine.ipynb
sgi/: __init__.py  classifier.py
sgi/_internal/: __init__.py  features.py  generator.py  physics.py
sgi/models/: sgi_light_v1.pkl
tests/: __init__.py  test_sgi.py
