[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sgi-machine"
version = "1.0.0"
description = "Structural Geospatial Identification: GPS+IMU object classification"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Yahya Akbay" }]
keywords = ["gps", "imu", "object-classification", "geospatial", "edge-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.1",
]

[project.optional-dependencies]
dev  = ["pytest", "pandas"]
full = ["pandas", "matplotlib"]

[project.urls]
"Kaggle"    = "https://www.kaggle.com/yahyaakbay"
"Notebooks" = "https://www.kaggle.com/yahyaakbay/sgi-v3"

[tool.setuptools.packages.find]
where = ["."]
include = ["sgi*"]
